--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LanPad - Real-time collaborative editor for local networks</title>
-    <meta property="og:title" content="LanPad">
-    <meta property="og:description" content="Real-time collaborative editor for local networks">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://metaory.github.io/lanpad/">
-    <meta property="og:image" content="https://metaory.github.io/lanpad/favicon.svg">
+    <title>LanPad - Real-time collaborative editor</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <base href="/lanpad/">
     <style>
@@ -21,30 +16,88 @@
             height: 100vh;
             display: flex;
             flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
-        #pad {
-            flex: 1;
-            width: 100%;
-            height: calc(100vh - 40px);
-            overflow: hidden;
-        }
-        .status {
-            padding: 10px 20px;
+        .container {
+            text-align: center;
+            padding: 2rem;
             background: #252526;
-            font-size: 14px;
+            border-radius: 12px;
+            max-width: 400px;
+            width: 90%;
+        }
+        h1 {
+            margin: 0 0 1rem;
+            font-size: 2rem;
+        }
+        .disclaimer {
+            font-size: 0.8rem;
             color: #666;
+            margin: 1rem 0;
+            line-height: 1.4;
         }
-        .cm-editor {
-            height: 100%;
+        .room-input {
+            display: flex;
+            gap: 0.5rem;
+            margin: 1rem 0;
         }
-        .cm-scroller {
-            overflow: auto;
+        input {
+            flex: 1;
+            padding: 0.5rem;
+            border: none;
+            border-radius: 6px;
+            background: #333;
+            color: #fff;
+            font-size: 1rem;
+        }
+        button {
+            padding: 0.5rem 1rem;
+            border: none;
+            border-radius: 6px;
+            background: #0066cc;
+            color: #fff;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+        button:hover {
+            background: #0052a3;
+        }
+        .or {
+            margin: 1rem 0;
+            color: #666;
         }
     </style>
 </head>
 <body>
-    <div id="pad"></div>
-    <div class="status" id="status">Disconnected</div>
-    <script type="module" src="/app.js"></script>
+    <div class="container">
+        <h1>LanPad</h1>
+        <div class="room-input">
+            <input type="text" id="roomName" placeholder="Enter room name (optional)">
+            <button onclick="joinRoom()">Join Room</button>
+        </div>
+        <div class="or">or</div>
+        <button onclick="createRoom()">Create New Room</button>
+        <div class="disclaimer">
+            Note: Anyone with the room name can join and edit. No authentication required.
+            For sensitive content, use a unique, hard-to-guess room name.
+        </div>
+    </div>
+    <script>
+        function joinRoom() {
+            const room = document.getElementById('roomName').value.trim()
+            window.location.href = `pad.html${room ? `?room=${room}` : ''}`
+        }
+
+        function createRoom() {
+            window.location.href = 'pad.html'
+        }
+
+        // Allow Enter key to submit
+        document.getElementById('roomName').addEventListener('keypress', (e) => {
+            if (e.key === 'Enter') joinRoom()
+        })
+    </script>
 </body>
 </html> 
