--- a/pad.html
+++ b/pad.html
@@ -17,17 +17,15 @@
             display: flex;
             flex-direction: column;
         }
+        #status {
+            padding: 0.5rem;
+            background: #252526;
+            border-bottom: 1px solid #333;
+            font-size: 0.9rem;
+        }
         #pad {
             flex: 1;
-            width: 100%;
-            height: calc(100vh - 40px);
             overflow: hidden;
-        }
-        .status {
-            padding: 10px 20px;
-            background: #252526;
-            font-size: 14px;
-            color: #666;
         }
         .cm-editor {
             height: 100%;
@@ -38,8 +36,8 @@
     </style>
 </head>
 <body>
+    <div id="status">Connecting...</div>
     <div id="pad"></div>
-    <div class="status" id="status">Connecting...</div>
-    <script type="module" src="/app.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html> 
